app/stylesheets/partials/_coding_page.sass
#classification
  a
    font-weight: normal
    font-size: 12px

  table#activity_description
    margin-top: 15px
    padding: 10px
    td
      color: $primary_dark
      padding: 4px 8px
      font-size: 0.85em
      &.title
        color: #aaaaaa
        font-size: 0.7em
        text-transform: uppercase
  #buttons
    position: absolute
    left: 280px
    top: 18px

#activity_classification
  form
    input[type=submit]
      margin-top: 10px

body #content #main .activity_tree a
  font-size: 12px
  padding: 4px 7px

.edit_activity
  position: relative

#expl
  color: $primary
  float: right
  position: absolute
  right: 15px
  top: 27px
  width: 323px

  span
    font-size: 11px
    &.budget
      display: inline-block
      float: right
      text-align: right
      width: 163px
      span
        padding-left: 3px
      img
        float: left
    &.spend
      float: left
      width: 153px
      span, a.tooltip
        float: left
      img
        float: right
        
  .click
    background: $primary_lighter
    border: 1px solid $primary_light
    float: left
    opacity: 0.7
    padding: 3px 6px
    +border-radius
    &:hover
      opacity: 1

  a
    text-decoration: none
    
  img
    margin: 0 3px

.inline_ratio
  display: inline-block !important
  font-size: 10px !important
  left: 34px
  position: absolute
  top: 7px

.tooltip
  display: inline-block
  height: 15px
  &.info
    font-size: 10px
    text-decoration: none

    &:hover, &:focus, &:active
      text-decoration: underline
  &.subtotal_icon
    float: right !important

    &.help_tip
      font-size: 11px
      font-weight: normal
      background-color: white

// Shared
.tab1, .tab2, .tab3, .tab4, .tab5, .tab6, .tab7, .tab8, .tab9, .tab10
  display: none

.progress-container
  border: 1px solid #cccccc
  width: 100px
  margin: 2px 5px 2px 0
  padding: 1px
  float: left
  background: white

.progress-container > div
  background-color: #ace97c
  height: 12px

.nav2
  +border-top-radius
  border-bottom: 1px solid $lighter-blue
  color: $mid-blue
  padding-left: 5px
  display: block
  ul
    +horizontal-list
    margin-bottom: -1px
    padding-top: 4px
    li
      display: inline
      float: left
      font-size: 12px
      padding: 5px 9px 2px
      white-space: nowrap
      //override
      &:first-child, &:last-child
        padding: 5px 9px 2px
      &.selected
        background: none repeat scroll 0 0 white
        border-color: $lighter-blue $lighter-blue unquote(" -moz-use-text-color")
        border-bottom: none
        border-width: 1px 1px 0
        color: $mid-blue
        font-weight: bold

.invalid_node
  background: #FFDDDD !important

